# shinxbot2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_tamp.txt  CONTRIBUTING.md  Dockerfile  README.MD  README.md  README_ZH.MD  README_ZH.md  build.sh  build_features.sh  docker-compose.yml  entrypoint.sh  main.cpp  nohup.sh  start.sh
config/: .gitignore  README.md  cat.json  cat_example.json  gemini_example.json  openai_example.json
config/core/: module_load_example.json  recover_example.json
config/features/cat/: cat_example.json  user_list_example.json
config/features/gemini/: gemini_example.json
config/features/guessletter/: letterbank_example.json
config/features/img/: img_example.json
config/features/memberchangef/: welcome_messages_example.json
config/features/nonogram/: nonogram_example.json
config/features/openai/: openai_example.json
config/features/wordle/: words_example.csv
config/guessmap/: maps_example.json
data/: homodata.txt
data/guessmap/: maps.json
dev_tools/: inspector.cpp  sender.sh
docs/: plugin-development-spec.md
events/: events.h
events/friendadd/: friendadd.cpp  friendadd.h
events/memberchange/: m_change.cpp  m_change.h
events/poke/: poke.cpp  poke.h
events/talkative/: talkative.cpp  talkative.h
functions/: functions.h
functions/621/: 621.cpp  621.h
functions/auto114/: auto114.cpp  auto114.h
functions/auto114514/: 114514.cpp  114514.h
functions/bilidown/: bilidown.h
functions/cat/: cat.cpp  cat.h  cat_main.cpp
functions/forwardgenerator/: forward.cpp  forward.h
functions/fudu/: fudu.cpp  fudu.h
functions/getJapaneseImage/: Anime_Img.cpp  Anime_Img.h
functions/hhsh/: hhsh.cpp  hhsh.h
functions/httpcats/: httpcats.cpp  httpcats.h
functions/img/: img.cpp  img.h
functions/msg_forwarder/: forwarder.cpp  forwarder.h
functions/ocr/: ocr.cpp  ocr.h
functions/op_gray/: gray_list.cpp  gray_list.h
functions/openai/: gpt3_5.cpp  gpt3_5.h
functions/original/: original.cpp  original.h
functions/random_color/: random_color.cpp  random_color.h
functions/recall/: recall.cpp  recall.h
inc/: utils.h
interfaces/: eventprocess.h  processable.h
lib/: .gitignore
resource/auto114/: homodata.txt
src/: ARCHITECTURE.md  main.cpp  mybot.hpp
src/bots/: mybot.cpp  mybot.hpp  shinxbot.cpp  shinxbot.hpp  shinxbot_meta.cpp  shinxbot_module.cpp  shinxbot_network.cpp  shinxbot_runtime.cpp
src/dev_tools/: inspector.cpp  sender.sh
src/events/: events.h  generate_cmake.py  make_all.sh
src/events/friendadd/: friendadd.cpp  friendadd.h
src/events/groupinvite/: groupinvite.cpp  groupinvite.h
src/events/memberchange/: m_change.cpp  m_change.h
src/events/poke/: poke.cpp  poke.h
src/events/talkative/: talkative.cpp  talkative.h
src/functions/: .gitignore  functions.h  generate_cmake.py  make_all.sh
src/functions/621/: 621.cpp  621.h
src/functions/NGgame/: nggame.cpp  nggame.h
src/functions/auto114/: auto114.cpp  auto114.h
src/functions/auto_approve/: auto_approve.cpp  auto_approve.h
src/functions/bilidecode/: bilidecode.cpp  bilidecode.h
src/functions/birthday/: birthday.cpp  birthday.hpp
src/functions/cat/: cat.cpp  cat.h  cat_main.cpp
src/functions/dice/: dice.cpp  dice.h  dice_tokenizer.hpp
src/functions/forwardgenerator/: forward.cpp  forward.h
src/functions/fudu/: fudu.cpp  fudu.h
src/functions/gemini/: gemini.cpp  gemini.h
src/functions/getJapaneseImage/: Anime_Img.cpp  Anime_Img.h
src/functions/guessletter/: gen_guessletter_bank.py  guessletter.cpp  guessletter.h
src/functions/guessmap/: guessmap.cpp  guessmap.h
src/functions/hhsh/: hhsh.cpp  hhsh.h
src/functions/httpcats/: httpcats.cpp  httpcats.h
src/functions/img/: img.cpp  img.h
src/functions/img_fun/: img_fun.cpp  img_fun.h
src/functions/informer/: informer.cpp  informer.h
src/functions/luck/: luck.cpp  luck.h
src/functions/memberchangef/: m_change_f.cpp  m_change_f.h
src/functions/msg_forwarder/: forwarder.cpp  forwarder.h
src/functions/nativeQuery/: nativeQuery.cpp  nativeQuery.h
src/functions/nonogram/: nonogram.cpp  nonogram.h  nonogram_gameplay.cpp  nonogram_image.cpp  nonogram_online.cpp  nonogram_session.cpp  solver.cpp  solver.h
src/functions/ocr/: ocr.cpp  ocr.h
src/functions/op_gray/: gray_list.cpp  gray_list.h
src/functions/openai/: gpt3_5.cpp  gpt3_5.h
src/functions/original/: original.cpp  original.h
src/functions/randomReply/: rp.cpp  rp.hpp
src/functions/random_color/: random_color.cpp  random_color.h
src/functions/recall/: recall.cpp  recall.h
src/functions/responder/: responder.cpp  responder.h
src/functions/sdxl/: sdxl.cpp  sdxl.h
src/functions/warn_recorder/: warn_recorder.cpp  warn_recorder.h
src/interfaces/: bot.cpp  bot.h  dynamic_lib.hpp  eventprocess.h  internal_message.hpp  processable.h
src/meta_event/: heartbeat.cpp  heartbeat.h
src/utils/: HTTP_connect.cpp  README.md  command_utils.cpp  converter.cpp  file_utils.cpp  image_utils.cpp  image_utils.h  json_utils.cpp  log.cpp  number.cpp  qq_utils.cpp  random.cpp  string_utils.cpp  timer.cpp  utils.h  uuid_utils.cpp
src/utils/meta_func/: backup.cpp  backup.h  progress_bar.cpp  progress_bar.hpp  timer.cpp  timer.h
templates/: event_plugin_template.cpp  event_plugin_template.h  function_plugin_template.cpp  function_plugin_template.h
tests/regression/: test_command_routing.py  test_module_contracts.py
tools/: audit_config_usage.py  format_cpp.sh
tools/bench/: gen_function_check_bench.py  run_command_batch.py
tools/dev_tools/: sender.sh
utils/: HTTP_connect.cpp  file_utils.cpp  httpurl_utils.cpp  image_utils.cpp  json_utils.cpp  qq_utils.cpp  random.cpp  string_utils.cpp  user_id.cpp  user_name.cpp  utils.h
